Rewritten interface without lanterna